# csv-fast-preview

./: .gitignore  Cargo.toml  README.md  goal.md
.github/workflows/: ci.yml
docs/: completion_audit.md  goal_closure_checklist.md
scripts/: bench_large.sh  gen_csv.sh  gen_csv_by_size.sh  gen_wide_5gb_csv.sh  run_5gb_benchmark.sh
src/: lib.rs  main.rs
src/app/: constants.rs  events.rs  fonts.rs  format.rs  mod.rs  state.rs  ui.rs
src/core/: config.rs  index.rs  mod.rs  query.rs  sniff.rs  unique.rs
src/worker/: export.rs  message.rs  mod.rs  row_cache.rs  runtime.rs  snapshot.rs
